tree-sitter-perl/test/corpus/file-io-system-advanced.txt
==================
Three-argument open variants
==================

open my $fh, '<', $filename or die $!;
open my $fh, '>', $filename or die $!;
open my $fh, '>>', $filename or die $!;
open my $fh, '+<', $filename or die $!;
open my $fh, '+>', $filename or die $!;

open my $fh, '<', \$string_ref;
open my $fh, '>', \$output;
open my $fh, '>>', \$append;

open my $pipe, '|-', 'command', @args;
open my $pipe, '-|', 'command', @args;

open my $fh, '<:raw', $binary_file;
open my $fh, '>:utf8', $text_file;
open my $fh, '<:encoding(UTF-16)', $unicode_file;

---

(source_file
  (expression_statement
    (lowprec_logical_expression
      (ambiguous_function_call_expression
        (function)
        (list_expression
          (variable_declaration
            (scalar
              (varname)))
          (string_literal
            (string_content))
          (scalar
            (varname))))
      (ambiguous_function_call_expression
        (function)
        (scalar
          (varname)))))
  (expression_statement
    (lowprec_logical_expression
      (ambiguous_function_call_expression
        (function)
        (list_expression
          (variable_declaration
            (scalar
              (varname)))
          (string_literal
            (string_content))
          (scalar
            (varname))))
      (ambiguous_function_call_expression
        (function)
        (scalar
          (varname)))))
  (expression_statement
    (lowprec_logical_expression
      (ambiguous_function_call_expression
        (function)
        (list_expression
          (variable_declaration
            (scalar
              (varname)))
          (string_literal
            (string_content))
          (scalar
            (varname))))
      (ambiguous_function_call_expression
        (function)
        (scalar
          (varname)))))
  (expression_statement
    (lowprec_logical_expression
      (ambiguous_function_call_expression
        (function)
        (list_expression
          (variable_declaration
            (scalar
              (varname)))
          (string_literal
            (string_content))
          (scalar
            (varname))))
      (ambiguous_function_call_expression
        (function)
        (scalar
          (varname)))))
  (expression_statement
    (lowprec_logical_expression
      (ambiguous_function_call_expression
        (function)
        (list_expression
          (variable_declaration
            (scalar
              (varname)))
          (string_literal
            (string_content))
          (scalar
            (varname))))
      (ambiguous_function_call_expression
        (function)
        (scalar
          (varname)))))
  (expression_statement
    (ambiguous_function_call_expression
      (function)
      (list_expression
        (variable_declaration
          (scalar
            (varname)))
        (string_literal
          (string_content))
        (refgen_expression
          (scalar
            (varname))))))
  (expression_statement
    (ambiguous_function_call_expression
      (function)
      (list_expression
        (variable_declaration
          (scalar
            (varname)))
        (string_literal
          (string_content))
        (refgen_expression
          (scalar
            (varname))))))
  (expression_statement
    (ambiguous_function_call_expression
      (function)
      (list_expression
        (variable_declaration
          (scalar
            (varname)))
        (string_literal
          (string_content))
        (refgen_expression
          (scalar
            (varname))))))
  (expression_statement
    (ambiguous_function_call_expression
      (function)
      (list_expression
        (variable_declaration
          (scalar
            (varname)))
        (string_literal
          (string_content))
        (string_literal
          (string_content))
        (array
          (varname)))))
  (expression_statement
    (ambiguous_function_call_expression
      (function)
      (list_expression
        (variable_declaration
          (scalar
            (varname)))
        (string_literal
          (string_content))
        (string_literal
          (string_content))
        (array
          (varname)))))
  (expression_statement
    (ambiguous_function_call_expression
      (function)
      (list_expression
        (variable_declaration
          (scalar
            (varname)))
        (string_literal
          (string_content))
        (scalar
          (varname)))))
  (expression_statement
    (ambiguous_function_call_expression
      (function)
      (list_expression
        (variable_declaration
          (scalar
            (varname)))
        (string_literal
          (string_content))
        (scalar
          (varname)))))
  (expression_statement
    (ambiguous_function_call_expression
      (function)
      (list_expression
        (variable_declaration
          (scalar
            (varname)))
        (string_literal
          (string_content))
        (scalar
          (varname))))))

==================
Socket operations
==================

use IO::Socket;

socket(my $socket, PF_INET, SOCK_STREAM, getprotobyname('tcp'));
bind($socket, sockaddr_in($port, INADDR_ANY));
listen($socket, SOMAXCONN);
accept(my $client, $socket);

setsockopt($socket, SOL_SOCKET, SO_REUSEADDR, 1);
getsockopt($socket, SOL_SOCKET, SO_ERROR);

connect($socket, $remote_addr);
shutdown($socket, 2);

send($socket, $data, 0);
recv($socket, $buffer, 1024, 0);

socketpair(my $parent, my $child, AF_UNIX, SOCK_STREAM, PF_UNSPEC);

---

(source_file
  (use_statement
    (package))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (variable_declaration
          (scalar
            (varname)))
        (bareword)
        (bareword)
        (func1op_call_expression
          (string_literal
            (string_content))))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (function_call_expression
          (function)
          (list_expression
            (scalar
              (varname))
            (bareword))))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (bareword))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (variable_declaration
          (scalar
            (varname)))
        (scalar
          (varname)))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (bareword)
        (bareword)
        (number))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (bareword)
        (bareword))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (scalar
          (varname)))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (number))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (scalar
          (varname))
        (number))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (scalar
          (varname))
        (number)
        (number))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (variable_declaration
          (scalar
            (varname)))
        (variable_declaration
          (scalar
            (varname)))
        (bareword)
        (bareword)
        (bareword)))))

==================
System I/O operations
==================

sysopen(my $fh, $filename, O_RDWR | O_CREAT, 0644);
sysread($fh, $buffer, 4096);
syswrite($fh, $data, length($data));
sysseek($fh, 0, SEEK_SET);

syscall(&SYS_write, fileno(STDOUT), $message, length($message));

truncate($fh, 1024);
truncate($filename, 0);

fcntl($fh, F_SETFL, O_NONBLOCK);
ioctl($fh, TIOCGWINSZ, $winsize);

---

(source_file
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (variable_declaration
          (scalar
            (varname)))
        (scalar
          (varname))
        (binary_expression
          (bareword)
          (bareword))
        (number))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (scalar
          (varname))
        (number))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (scalar
          (varname))
        (func1op_call_expression
          (scalar
            (varname))))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (number)
        (bareword))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (function_call_expression
          (function
            (varname)))
        (func1op_call_expression
          (bareword))
        (scalar
          (varname))
        (func1op_call_expression
          (scalar
            (varname))))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (number))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (number))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (bareword)
        (bareword))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (bareword)
        (scalar
          (varname))))))

==================
File locking
==================

use Fcntl qw(:flock);

flock($fh, LOCK_EX) or die "Cannot lock: $!";
flock($fh, LOCK_SH) or die "Cannot lock: $!";
flock($fh, LOCK_UN);
flock($fh, LOCK_NB | LOCK_EX) or die "File is locked";

open my $lock, '>', "$file.lock" or die $!;
flock($lock, LOCK_EX | LOCK_NB) or die "Already running";

{
    open my $fh, '+<', $file or die $!;
    flock($fh, LOCK_EX) or die $!;
    # File automatically unlocked when $fh goes out of scope
}

---

(source_file
  (use_statement
    (package)
    (quoted_word_list
      (string_content)))
  (expression_statement
    (lowprec_logical_expression
      (function_call_expression
        (function)
        (list_expression
          (scalar
            (varname))
          (bareword)))
      (ambiguous_function_call_expression
        (function)
        (interpolated_string_literal
          (string_content
            (scalar
              (varname)))))))
  (expression_statement
    (lowprec_logical_expression
      (function_call_expression
        (function)
        (list_expression
          (scalar
            (varname))
          (bareword)))
      (ambiguous_function_call_expression
        (function)
        (interpolated_string_literal
          (string_content
            (scalar
              (varname)))))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (bareword))))
  (expression_statement
    (lowprec_logical_expression
      (function_call_expression
        (function)
        (list_expression
          (scalar
            (varname))
          (binary_expression
            (bareword)
            (bareword))))
      (ambiguous_function_call_expression
        (function)
        (interpolated_string_literal
          (string_content)))))
  (expression_statement
    (lowprec_logical_expression
      (ambiguous_function_call_expression
        (function)
        (list_expression
          (variable_declaration
            (scalar
              (varname)))
          (string_literal
            (string_content))
          (interpolated_string_literal
            (string_content
              (scalar
                (varname))))))
      (ambiguous_function_call_expression
        (function)
        (scalar
          (varname)))))
  (expression_statement
    (lowprec_logical_expression
      (function_call_expression
        (function)
        (list_expression
          (scalar
            (varname))
          (binary_expression
            (bareword)
            (bareword))))
      (ambiguous_function_call_expression
        (function)
        (interpolated_string_literal
          (string_content)))))
  (block_statement
    (expression_statement
      (lowprec_logical_expression
        (ambiguous_function_call_expression
          (function)
          (list_expression
            (variable_declaration
              (scalar
                (varname)))
            (string_literal
              (string_content))
            (scalar
              (varname))))
        (ambiguous_function_call_expression
          (function)
          (scalar
            (varname)))))
    (expression_statement
      (lowprec_logical_expression
        (function_call_expression
          (function)
          (list_expression
            (scalar
              (varname))
            (bareword)))
        (ambiguous_function_call_expression
          (function)
          (scalar
            (varname)))))
    (comment)))

==================
Directory operations
==================

opendir(my $dh, $directory) or die $!;
my @files = readdir($dh);
closedir($dh);

rewinddir($dh);
seekdir($dh, $position);
my $pos = telldir($dh);

while (my $entry = readdir($dh)) {
    next if $entry =~ /^\./;
    print "$entry\n";
}

mkdir($dirname, 0755) or die $!;
rmdir($dirname) or die $!;

chdir($directory) or die $!;
my $cwd = getcwd();

---

(source_file
  (expression_statement
    (lowprec_logical_expression
      (function_call_expression
        (function)
        (list_expression
          (variable_declaration
            (scalar
              (varname)))
          (scalar
            (varname))))
      (ambiguous_function_call_expression
        (function)
        (scalar
          (varname)))))
  (expression_statement
    (assignment_expression
      (variable_declaration
        (array
          (varname)))
      (func1op_call_expression
        (scalar
          (varname)))))
  (expression_statement
    (func1op_call_expression
      (scalar
        (varname))))
  (expression_statement
    (func1op_call_expression
      (scalar
        (varname))))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (scalar
          (varname))
        (scalar
          (varname)))))
  (expression_statement
    (assignment_expression
      (variable_declaration
        (scalar
          (varname)))
      (func1op_call_expression
        (scalar
          (varname)))))
  (loop_statement
    (assignment_expression
      (variable_declaration
        (scalar
          (varname)))
      (func1op_call_expression
        (scalar
          (varname))))
    (block
      (expression_statement
        (postfix_conditional_expression
          (loopex_expression)
          (binary_expression
            (scalar
              (varname))
            (match_regexp
              (regexp_content
                (escape_sequence))))))
      (expression_statement
        (ambiguous_function_call_expression
          (function)
          (interpolated_string_literal
            (string_content
              (scalar
                (varname))
              (escape_sequence)))))))
  (expression_statement
    (lowprec_logical_expression
      (function_call_expression
        (function)
        (list_expression
          (scalar
            (varname))
          (number)))
      (ambiguous_function_call_expression
        (function)
        (scalar
          (varname)))))
  (expression_statement
    (lowprec_logical_expression
      (func1op_call_expression
        (scalar
          (varname)))
      (ambiguous_function_call_expression
        (function)
        (scalar
          (varname)))))
  (expression_statement
    (lowprec_logical_expression
      (func1op_call_expression
        (scalar
          (varname)))
      (ambiguous_function_call_expression
        (function)
        (scalar
          (varname)))))
  (expression_statement
    (assignment_expression
      (variable_declaration
        (scalar
          (varname)))
      (function_call_expression
        (function)))))

==================
File test operators combinations
==================

if (-e $file && -r _ && -w _ && !-d _) {
    print "Readable and writable file\n";
}

if (-f $file && -s _) {
    print "Non-empty file\n";
}

if (-d $dir && -x _) {
    print "Executable directory\n";
}

my $age = -M $file;
my $accessed = -A _;
my $changed = -C _;

if (-T $file) {
    print "Text file\n";
} elsif (-B _) {
    print "Binary file\n";
}

---

(source_file
  (conditional_statement)
  (conditional_statement)
  (conditional_statement)
  (expression_statement)
  (expression_statement)
  (expression_statement)
  (conditional_statement))

==================
Select and file handles
==================

select((select($fh), $| = 1)[0]);

my $oldfh = select($newfh);
$| = 1;
select($oldfh);

vec($rin, fileno(STDIN), 1) = 1;
vec($rin, fileno($socket), 1) = 1;
select($rout = $rin, undef, undef, $timeout);

use IO::Select;
my $sel = IO::Select->new();
$sel->add($fh1, $fh2, $fh3);
my @ready = $sel->can_read($timeout);

---

(source_file
  (expression_statement
    (function_call_expression
      (function)
      (anonymous_slice_expression
        (list_expression
          (function_call_expression
            (function)
            (scalar
              (varname)))
          (assignment_expression
            (scalar
              (varname))
            (number)))
        (number))))
  (expression_statement
    (assignment_expression
      (variable_declaration
        (scalar
          (varname)))
      (function_call_expression
        (function)
        (scalar
          (varname)))))
  (expression_statement
    (assignment_expression
      (scalar
        (varname))
      (number)))
  (expression_statement
    (function_call_expression
      (function)
      (scalar
        (varname))))
  (expression_statement
    (assignment_expression
      (function_call_expression
        (function)
        (list_expression
          (scalar
            (varname))
          (func1op_call_expression
            (bareword))
          (number)))
      (number)))
  (expression_statement
    (assignment_expression
      (function_call_expression
        (function)
        (list_expression
          (scalar
            (varname))
          (func1op_call_expression
            (scalar
              (varname)))
          (number)))
      (number)))
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (assignment_expression
          (scalar
            (varname))
          (scalar
            (varname)))
        (undef_expression)
        (undef_expression)
        (scalar
          (varname)))))
  (use_statement
    (package))
  (expression_statement
    (assignment_expression
      (variable_declaration
        (scalar
          (varname)))
      (method_call_expression
        (bareword)
        (method))))
  (expression_statement
    (method_call_expression
      (scalar
        (varname))
      (method)
      (list_expression
        (scalar
          (varname))
        (scalar
          (varname))
        (scalar
          (varname)))))
  (expression_statement
    (assignment_expression
      (variable_declaration
        (array
          (varname)))
      (method_call_expression
        (scalar
          (varname))
        (method)
        (scalar
          (varname))))))

==================
Pipe operations
==================

pipe(my $reader, my $writer);

open(my $pipe, "|-", "command") or die $!;
print $pipe "data\n";
close($pipe);

open(my $output, "-|", "ls", "-la") or die $!;
while (<$output>) {
    print;
}
close($output);

my $pid = open(my $fh, "-|");
if (!defined $pid) {
    die "Cannot fork: $!";
} elsif ($pid == 0) {
    exec("command", @args);
} else {
    while (<$fh>) {
        process($_);
    }
    close($fh);
}

---
